kiwix-tools 3.5.0
=================

 * Do not use `--static` option when compiling on MacOs (@mgautierfr #615)
 * Move main branch from `master` to `main`.
 * Fix docker image (@jacroe #597)
 * Various CI improvements (@kelson42)

kiwix-serve
-----------

 * Add documentation about the kiwix-serve API (@veloman-yunkan #586)
   https://kiwix-tools.readthedocs.io/en/latest/kiwix-serve.html#http-api

kiwix-tools 3.4.0
=================

 * Remove last reference to kiwix-read tool (@legoktm #569)

kiwix-serve
-----------

 * Fix broken indentation in usage (@kelson42 #560)
 * Exit if wrong arguments are passed (@kelson42 #567)
 * Do not allow multiple values for same option (@juuz0 #564)
 * Fix default location of "rootLocation" (@rgaudin #571)
 * [DOCKER] Change default port to 8080 (@neyder #581)
 * [DOCKER] Simplify dockerfile (@rgaudin #582)

kiwix-manage
------------

 * Fix man page (@kelson42 #576)

kiwix-tools 3.3.0
=================

 * Remove kiwix-read tool (@veloman-yunkan #535)

kiwix-serve
-----------

 * Add an option to limit the number of connections for a same IP (@juuz0 #534)
 * Add an option to limit the number of zim in a multizim fulltext search (@mgautierfr #558)

kiwix-search
------------

 * Remove usage of libkiwix's deprecated api (@veloman-yunkan #535)

kiwix-manage
------------

 * Correctly return a value !0 if something went wrong (@mgautierfr #553)


kiwix-tools 3.2.0
=================

 * Print the version of all dependencies (@kelson42 #516)
 * Better Docker images (@kelson42 @rgaudin)
 * Update Readme (@kelson42)
 * Build debian packages on CI (@legoktm #394)
 * Add man pages for kiwix-read and kiwix-search (@legoktm #392)
 * Various fixes (@legoktm @hashworks @mgautierfr)


kiwix-serve
-----------

 * Print the url on which a user can connect to on startup (@juuz0 #499 #522)
 * Reload library on SIGHUP signal (@veloman-yunkan #497)
 * Add a option `--monitorLibrary` to monitor and automically reload the library